[gd_scene load_steps=8 format=3 uid="uid://dj3qmue0yqeo3"]

[ext_resource type="Script" uid="uid://cik4i20i7skq6" path="res://scripts/ui/level_select_menu.gd" id="1_hjipy"]
[ext_resource type="Texture2D" uid="uid://d1njkifjlhw4y" path="res://assets/logo.png" id="2_mf26o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Panel"]
bg_color = Color(0.0470588, 0.0588235, 0.0901961, 0.94)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.227451, 0.803922, 0.890196, 0.8)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CardNormal"]
content_margin_left = 18.0
content_margin_top = 18.0
content_margin_right = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.0901961, 0.105882, 0.14902, 0.94)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.286275, 0.760784, 0.858824, 0.55)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CardPressed"]
content_margin_left = 18.0
content_margin_top = 18.0
content_margin_right = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.0705882, 0.0901961, 0.141176, 0.94)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.243137, 0.580392, 0.886275, 0.9)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CardHover"]
content_margin_left = 18.0
content_margin_top = 18.0
content_margin_right = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.141176, 0.164706, 0.231373, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.352941, 0.854902, 0.913725, 0.85)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CardFocus"]
content_margin_left = 18.0
content_margin_top = 18.0
content_margin_right = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.101961, 0.137255, 0.2, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.780392, 0.529412, 0.988235, 0.95)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hjipy")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.75)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -280.0
offset_right = 520.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="Texts" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header/Texts"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Seleccionar nivel"

[node name="Subtitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header/Texts"]
self_modulate = Color(0.784314, 0.835294, 0.905882, 1)
layout_mode = 2
text = "Elige el escenario que mejor se adapte a tu estilo."

[node name="Logo" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Header"]
self_modulate = Color(0.862745, 0.956863, 1, 0.85)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource("2_mf26o")
expand_mode = 3
stretch_mode = 4

[node name="LevelsGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18
columns = 3

[node name="OfficeExteriorCard" type="Button" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_CardNormal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_CardPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_CardHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_CardFocus")

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeExteriorCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeExteriorCard/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Subtitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeExteriorCard/Content"]
self_modulate = Color(0.713726, 0.87451, 0.945098, 1)
layout_mode = 2

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeExteriorCard/Content"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeExteriorCard/Content"]
modulate = Color(1, 1, 1, 0.94)
self_modulate = Color(0.792157, 0.834, 0.905882, 1)
layout_mode = 2
autowrap_mode = 2

[node name="OfficeInterior1Card" type="Button" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_CardNormal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_CardPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_CardHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_CardFocus")

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior1Card"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior1Card/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Subtitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior1Card/Content"]
self_modulate = Color(0.713726, 0.87451, 0.945098, 1)
layout_mode = 2

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior1Card/Content"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior1Card/Content"]
self_modulate = Color(0.792157, 0.834, 0.905882, 1)
layout_mode = 2
autowrap_mode = 2

[node name="OfficeInterior2Card" type="Button" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_CardNormal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_CardPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_CardHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_CardFocus")

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior2Card"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior2Card/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Subtitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior2Card/Content"]
self_modulate = Color(0.713726, 0.87451, 0.945098, 1)
layout_mode = 2

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior2Card/Content"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelsGrid/OfficeInterior2Card/Content"]
self_modulate = Color(0.792157, 0.834, 0.905882, 1)
layout_mode = 2
autowrap_mode = 2

[node name="ActionsRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 12

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/ActionsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionsRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Volver"
